# modern-mutual-information

./: .gitignore  .project  CMakeLists.txt  README.md  Toolchain-i686-w64-mingw32.cmake  main.cpp  matlab.cpp  matlab.mex
matlab/: README.md  calculateIndices.m  shiftmiDouble.cpp  shiftmiDoubleBootstrap.cpp  shiftmiDoubleBootstrapWrapper.m  shiftmiDoubleWrapper.m  shiftmiFloat.cpp  shiftmiFloatBootstrap.cpp  shiftmiFloatBootstrapWrapper.m  shiftmiFloatEasy.m  shiftmiFloatWrapper.m
src/: CudaMI.cpp  CudaMI.cu  CudaMI.h  Histogram1d.cpp  Histogram1d.h  Histogram2d.cpp  Histogram2d.h  ISimpleFile.h  SimpleBinaryFile.cpp  SimpleBinaryFile.h  SimpleCSV.cpp  SimpleCSV.h  main.cpp  utilities.cpp  utilities.h
test/: CudaMI_test.cpp  Histogram1d_test.cpp  Histogram2d_test.cpp  SimpleBinaryFile_test.cpp  SimpleCSV_test.cpp  gendata.py  test_main.cpp  utilities_test.cpp
test/data/: SimpleCSV_random1.csv  SimpleCSV_random2.csv
